# cisv-python

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml
bindings/python/: MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
bindings/python-nanobind/: CMakeLists.txt  README.md  pyproject.toml
bindings/python-nanobind/benchmarks/: Dockerfile  README.md
bindings/python-nanobind/cisv/: __init__.py  _core.pyi
bindings/python-nanobind/src/: cisv_nanobind.cpp
bindings/python-nanobind/tests/: __init__.py
bindings/python/cisv/: __init__.py  parser.py
bindings/python/cisv/libs/: __init__.py
bindings/python/tests/: test_parser.py
cisv/: CMakeLists.txt  README.md  pyproject.toml
cisv/benchmarks/: Dockerfile  README.md  benchmark.py
cisv/cisv/: __init__.py
cisv/src/: cisv_nanobind.cpp
cisv/tests/: test_parser.py
core/: CMakeLists.txt  Makefile
core/include/cisv/: parser.h  simd.h  transformer.h  writer.h
core/src/: parser.c  transformer.c  writer.c
core/tests/: test_core.c
examples/: basic.py  iterator.py
